--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,14 @@
 /* Custom page CSS
 -------------------------------------------------- */
 
+.base {
+	font-size: 18px;
+	line-height: 1.2;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #3d6fae;
+}
+
 /* Header */
 
 header {
@@ -29,7 +37,7 @@ img.logo {
 	color: #000000;
 }
 
-.email a {
+.email a, .address span {
 	font-size: 15px;
 	line-height: 2;
 	font-weight: 500;
@@ -39,6 +47,18 @@ img.logo {
 
 .phone a:hover, .email a:hover {
 	color: #5a6268;
+}
+
+.phone img{
+	width: 19px;
+}
+
+.email img, .address img {
+	width: 22px;
+}
+
+.social img {
+	width: 36px;
 }
 
 .social a img:hover {
@@ -67,10 +87,17 @@ img.logo {
 }
 
 .form-control {
-	background-image: url(/img/search_20.png);
+	background-image: url(/img/svg/search.svg);
 	background-repeat: no-repeat;
 	background-position-x: 215px;
 	background-position-y: center;
+	background-size: 11%;
+}
+
+@media (max-width: 1199px) {
+	.form-inline .form-control {
+		background-position-x: 155px;
+	}
 }
 
 /* Footer */
