--- a/css/custom.css
+++ b/css/custom.css
@@ -37,11 +37,18 @@ img.logo {
 	color: #000000;
 }
 
-.email a, .address span {
+.email a {
 	font-size: 15px;
 	line-height: 2;
 	font-weight: 500;
 	text-decoration: underline;
+	color: #000000;
+}
+
+.address span {
+	font-size: 15px;
+	line-height: 2;
+	font-weight: 500;
 	color: #000000;
 }
 
@@ -86,7 +93,7 @@ img.logo {
 	left: 50%;
 }
 
-.form-control {
+nav .form-control {
 	background-image: url(/img/svg/search.svg);
 	background-repeat: no-repeat;
 	background-position-x: 215px;
@@ -95,9 +102,25 @@ img.logo {
 }
 
 @media (max-width: 1199px) {
-	.form-inline .form-control {
+	nav .form-control {
 		background-position-x: 155px;
 	}
+}
+
+/* Bottom block */
+
+ul.eps-list li {
+	margin-bottom: 8px;
+}
+
+ul.eps-list li a {
+	font-size: 14px;
+	font-weight: 500;
+	color: #000000;
+}
+
+ul.eps-list li a:hover{
+	color: #5a6268;
 }
 
 /* Footer */
