разметил блок slider

--- a/css/custom.css
+++ b/css/custom.css
@@ -111,6 +111,13 @@ nav .form-control {
 	}
 }
 
+/* Slider */
+
+.slider {
+	background-color: #f3f6fa;
+}
+
+
 /* Bottom block */
 
 ul.eps-list li {
