--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7287,14 +7287,14 @@ a.close.disabled {
 
 .carousel-caption {
 	position: absolute;
-	right: 15%;
-	bottom: 20px;
-	left: 15%;
+	/* right: 15%; */
+	bottom: 25px;
+	left: 4%;
 	z-index: 10;
 	padding-top: 20px;
 	padding-bottom: 20px;
 	color: #fff;
-	text-align: center;
+	text-align: left;
 }
 
 @-webkit-keyframes spinner-border {
