--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@
 /* Header */
 
 header {
-	background: url(/img/svg/background_1-01.svg) no-repeat top right;
+	background: url(../img/svg/background_1-01.svg) no-repeat top right;
 	padding-top: 50px;
 	padding-bottom: 30px;
 }
@@ -98,7 +98,7 @@ img.logo {
 }
 
 nav .form-control {
-	background-image: url(/img/svg/search.svg);
+	background-image: url(../img/svg/search.svg);
 	background-repeat: no-repeat;
 	background-position-x: 215px;
 	background-position-y: center;
@@ -114,7 +114,7 @@ nav .form-control {
 /* Slider */
 
 .product-slider {
-	background: url(/img/sloy_1_34.png) #f3f6fa no-repeat top center;
+	background: url(../img/sloy_1_34.png) #f3f6fa no-repeat top center;
 }
 
 .carousel-caption {
@@ -242,8 +242,8 @@ nav .form-control {
 /* Main Content */
 
 .main-content {
-	/*background: url(/img/svg/background_2-01.svg) no-repeat top right;*/
-	background: url(/img/background_2-01.png) no-repeat top right;
+	/*background: url(../img/svg/background_2-01.svg) no-repeat top right;*/
+	background: url(../img/background_2-01.png) no-repeat top right;
 	height: 550px;
 }
 
