--- a/css/custom.css
+++ b/css/custom.css
@@ -220,11 +220,21 @@ nav .form-control {
 .product-menu li:hover a {
 	text-decoration: none;
 	font-weight: 700;
+	transition: 0.1s;
+	-webkit-transition: 0.1s;
+	-moz-transition: 0.1s;
+	-ms-transition: 0.1s;
+	-o-transition: 0.1s;
 }
 
 .product-menu li:hover {
 	background-color: #fff;
 	cursor: pointer;
+	transition: 0.3s;
+	-webkit-transition: 0.3s;
+	-moz-transition: 0.3s;
+	-ms-transition: 0.3s;
+	-o-transition: 0.3s;
 }
 
 .product-menu li:after{
@@ -286,6 +296,13 @@ ul.eps-list li a {
 
 ul.eps-list li a:hover{
 	color: #5a6268;
+}
+
+/* Subscribe */
+
+.subscribe {
+	background-color: #355176;
+	background-image: url(../img/background_3-01.png);
 }
 
 /* Footer */
