--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,7 @@
 /* Header */
 
 header {
-	background: url(../img/svg/background_1-01.svg) no-repeat top right;
+	background: url(../img/header_bg.png) no-repeat top right;
 	padding-top: 50px;
 	padding-bottom: 30px;
 }
@@ -280,6 +280,15 @@ p.red-deco {
 	font-weight: 500;
 	text-transform: none;
 	color: #000000;
+}
+
+span.bg-icon {
+	width: 40px;
+	height: 40px;
+	background-color: #d4d9e1;
+	border-radius: 50%;
+	padding: 6px;
+	margin-right: 20px;
 }
 
 /* Bottom block */
