--- a/css/custom.css
+++ b/css/custom.css
@@ -27,6 +27,7 @@ img.logo {
 	line-height: 24px;
 	font-weight: 500;
 	text-transform: uppercase;
+	margin: 0;
 }
 
 .phone a {
@@ -312,6 +313,39 @@ ul.eps-list li a:hover{
 .subscribe {
 	background-color: #355176;
 	background-image: url(../img/background_3-01.png);
+}
+
+.subscribe-title {
+	font-size: 18px;
+	line-height: 24px;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #ffffff;
+}
+
+.small-conf {
+	display: inline-block;
+	font-size: 12px;
+	line-height: 1.2;
+	font-weight: 400;
+	color: #ffffff;
+	text-align: right;
+}
+
+@media (min-width: 992px) {
+	.subscribe input#name-input {
+		border-radius: 10px 0px 0px 10px;
+		height: 41px;
+	}
+	.subscribe input#email-input, .subscribe input#phone-input{
+		border-radius: 0;
+		height: 41px;
+	}
+	.subscribe button {
+		border-radius: 0px 10px 10px 0px;
+		width: 149px;
+		height: 41px;
+	}
 }
 
 /* Footer */
