--- a/css/custom.css
+++ b/css/custom.css
@@ -345,6 +345,7 @@ ul.eps-list li a:hover{
 		border-radius: 0px 10px 10px 0px;
 		width: 149px;
 		height: 41px;
+		background-color: #1e1f21;
 	}
 }
 
