--- a/css/custom.css
+++ b/css/custom.css
@@ -308,6 +308,44 @@ ul.eps-list li a:hover{
 	color: #5a6268;
 }
 
+/* News Block */
+
+.news {
+	background-color: #3d6fae;
+}
+
+.title-news {
+	font-size: 18px;
+	line-height: 1.2;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #ffffff;
+	margin-right: 25px;
+	margin-bottom: 0;
+}
+
+span.all-items a {
+	font-size: 14px;
+	line-height: 1.2;
+	font-weight: 700;
+	text-decoration: underline;
+	text-transform: uppercase;
+	color: #0e0f0f;
+	padding-top: 3px;
+}
+
+span.all-items a:hover {
+	color: #fff;
+}
+
+.carousel-control-prev {
+		justify-content: start;
+}
+
+.carousel-control-next {
+	justify-content: end;
+}
+
 /* Subscribe */
 
 .subscribe {
