--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5351,7 +5351,11 @@ input[type="button"].btn-block {
 }
 
 .card-title {
-	margin-bottom: 0.75rem;
+	margin-bottom: 0.5rem;
+	font-size: 13px;
+	line-height: 1.2;
+	font-weight: 700;
+	color: #000000;
 }
 
 .card-subtitle {
