--- a/css/custom.css
+++ b/css/custom.css
@@ -324,6 +324,10 @@ ul.eps-list li a:hover{
 	margin-bottom: 0;
 }
 
+#carouselExampleControls {
+	padding: 0 45px;
+}
+
 span.all-items a {
 	font-size: 14px;
 	line-height: 1.2;
@@ -354,16 +358,41 @@ p.card-text {
 	font-style: italic;
 }
 
+.carousel-control-prev-icon {
+	background-image: url("../img/carousel_control_prev_icon.png");
+}
+
+.carousel-control-next-icon {
+	background-image: url("../img/carousel_control_next_icon.png");
+}
+
+.carousel-control-prev-icon, .carousel-control-next-icon {
+	width: 20px;
+	height: 35px;
+}
+
 .carousel-control-prev {
-		justify-content: start;
+	justify-content: start;
+	opacity: 1;
 }
 
 .carousel-control-next {
 	justify-content: end;
+	opacity: 1;
+}
+
+@media (min-wight: 992px){
+	.card-body-img {
+		padding: 0 0.4rem 0.75rem 0.75rem;
+	}
 }
 
 .card-body-img {
-	padding: 0 0.4rem 0.75rem 0.75rem;
+	padding: 0.75rem;
+}
+
+.news .card {
+	border-radius: 0.1rem;
 }
 
 .news .card-body {
