--- a/css/custom.css
+++ b/css/custom.css
@@ -111,6 +111,12 @@ nav .form-control {
 		background-position-x: 155px;
 	}
 }
+@media only screen and (min-width: 992px) {
+	.dropdown:hover .dropdown-menu {
+		display: block;
+		margin-top: 0;
+	}
+}
 
 /* Slider */
 
