--- a/css/custom.css
+++ b/css/custom.css
@@ -117,6 +117,11 @@ nav .form-control {
 		margin-top: 0;
 	}
 }
+@media only screen and (max-width: 991px) {
+	.dropdown-toggle::after {
+		display: none;
+	}
+}
 
 /* Slider */
 
