--- a/css/custom.css
+++ b/css/custom.css
@@ -162,6 +162,18 @@ nav .form-control {
 
 .partners img {
 	width: auto;
+	transition: filter .1s ease-in-out;
+	-webkit-filter: grayscale(0%);
+	filter: grayscale(0%);
+	-webkit-transition: filter .1s ease-in-out;
+	-moz-transition: filter .1s ease-in-out;
+	-ms-transition: filter .1s ease-in-out;
+	-o-transition: filter .1s ease-in-out;
+}
+
+.partners img:hover {
+	-webkit-filter: grayscale(99%);
+	filter: grayscale(99%);
 }
 
 .tab-partners {
