--- a/css/custom.css
+++ b/css/custom.css
@@ -81,7 +81,7 @@ img.logo {
 	padding-right: 1em !important;
 }
 
-.active a.nav-link:before {
+nav .active a.nav-link:before {
 	display: inline-block;
 	color: #f22929;
 	content: "";
@@ -158,6 +158,10 @@ nav .form-control {
 	padding: 31px 30px;
 	justify-content: space-between;
 	align-items: center;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	-ms-border-radius: 10px;
+	-o-border-radius: 10px;
 }
 
 .partners img {
@@ -182,6 +186,10 @@ nav .form-control {
 	max-width: 200px;
 	text-align: center;
 	margin-left: 45px;
+	-webkit-border-radius: 10px 10px 0px 0px;
+	-moz-border-radius: 10px 10px 0px 0px;
+	-ms-border-radius: 10px 10px 0px 0px;
+	-o-border-radius: 10px 10px 0px 0px;
 }
 
 .tab-partners h3 {
@@ -275,19 +283,55 @@ nav .form-control {
 
 .product-menu .dropdown-menu {
 	z-index: 100;
-	width: 100%;
+	width: 506px;
 	background-color: #fff;
 	border: 0;
 	margin: 0;
+	box-shadow: 1px 2px 3px 0px rgb(0 0 0 / 21%);
+	border-radius: 0 12px 12px 0;
+	-webkit-border-radius: 0 12px 12px 0;
+	-moz-border-radius: 0 12px 12px 0;
+	-ms-border-radius: 0 12px 12px 0;
+	-o-border-radius: 0 12px 12px 0;
+	cursor: auto;
 }
 
-.dropright-item-level1 {
+.product-menu .nav-pills .nav-link {
 	font-size: 14px;
 	line-height: 1.2;
-	text-transform: none;
+	font-weight: 700;
 	color: #3d6fae;
-	display: block;
-	padding: 10px;
+	padding: 0.7rem 1rem;
+	border-bottom: 1px solid #6f9bd1;
+	border-radius: 0;
+	-webkit-border-radius: 0;
+	-moz-border-radius: 0;
+	-ms-border-radius: 0;
+	-o-border-radius: 0;
+}
+
+.product-menu .nav-pills .nav-link.active {
+	background-color: transparent;
+	text-decoration: underline;
+}
+
+.product-menu .nav-pills li:last-child .nav-link {
+	border-bottom: 1px solid transparent;
+}
+
+#pills-tabContent ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+#pills-tabContent ul > li > a {
+	font-size: 14px;
+	line-height: 1.2;
+	font-weight: 500;
+	color: #000000;
+	padding: 10px 0;
+	display: inherit;
 }
 
 /* Main Content */
@@ -330,6 +374,10 @@ span.bg-icon {
 	border-radius: 50%;
 	padding: 6px;
 	margin-right: 20px;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
 }
 
 /* News Block */
@@ -419,6 +467,10 @@ p.card-text {
 
 .news .card {
 	border-radius: 0.1rem;
+	-webkit-border-radius: 0.1rem;
+	-moz-border-radius: 0.1rem;
+	-ms-border-radius: 0.1rem;
+	-o-border-radius: 0.1rem;
 }
 
 .news .card-body {
@@ -453,16 +505,28 @@ p.card-text {
 	.subscribe input#name-input {
 		border-radius: 10px 0px 0px 10px;
 		height: 41px;
+		-webkit-border-radius: 10px 0px 0px 10px;
+		-moz-border-radius: 10px 0px 0px 10px;
+		-ms-border-radius: 10px 0px 0px 10px;
+		-o-border-radius: 10px 0px 0px 10px;
 	}
 	.subscribe input#email-input, .subscribe input#phone-input{
 		border-radius: 0;
 		height: 41px;
+		-webkit-border-radius:0;
+		-moz-border-radius:0;
+		-ms-border-radius:0;
+		-o-border-radius:0;
 	}
 	.subscribe button {
 		border-radius: 0px 10px 10px 0px;
 		width: 149px;
 		height: 41px;
 		background-color: #1e1f21;
+		-webkit-border-radius: 0px 10px 10px 0px;
+		-moz-border-radius: 0px 10px 10px 0px;
+		-ms-border-radius: 0px 10px 10px 0px;
+		-o-border-radius: 0px 10px 10px 0px;
 	}
 }
 
