--- a/css/custom.css
+++ b/css/custom.css
@@ -12,7 +12,6 @@
 /* Header */
 
 header {
-	/*background: url(../img/header_bg.png) no-repeat top right;*/
 	background: url(../img/svg/background_1-01.svg) no-repeat top right;
 	background-size: 1920px;
 	padding-top: 50px;
@@ -350,17 +349,56 @@ nav .form-control {
 
 /* Main Content */
 
-.main-content {
-	/*background: url(../img/background_2-01.png) no-repeat top right;*/
+.main-home {
 	background: url(../img/svg/background_2-01.svg) no-repeat top right;
 	background-size: 1430px;
 }
 
-p.red-deco {
+.main-inner {
+	background: url(../img/sloy_1_34.png) #f3f6fa no-repeat top center;
+}
+
+.inner-content-right {
+	background: url(../img/sloy_1_34.png) #fff no-repeat top center;
+}
+
+.red-deco {
 	border-left: 6px solid #f22929;
 	padding-left: 20px;
 	font-weight: 700;
 	margin-bottom: 2.5rem!important;
+}
+
+.blue-deco {
+	font-weight: 700;
+	color: #3d6fae;
+}
+
+ul.red-sqr {
+	margin: 2rem 0 1.5rem;
+	padding-left: 0;
+	list-style-type: none;
+}
+
+ul.red-sqr li {
+	padding-left: 1.6rem;
+	background-image: url(../img/svg/list-item-icon.svg);
+	background-position: 0 0.5rem;
+	background-size: 0.6rem 0.6rem;
+	background-repeat: no-repeat;
+	margin-bottom: 1rem;
+}
+
+li.breadcrumb-item a {
+	font-size: 14px;
+	color: #3d6fae;
+	font-weight: 500;
+}
+
+li.breadcrumb-item.active {
+	font-weight: 600;
+	color: #060606;
+	font-size: 14px;
 }
 
 .home-page p {
@@ -489,7 +527,6 @@ p.card-text {
 
 .subscribe {
 	background-color: #355176;
-	/*background-image: url(../img/background_3-01.png);*/
 	background-image: url(../img/svg/background_3-01.svg);
 	background-size: 1920px;
 }
