начал стр Лицензии

--- a/css/custom.css
+++ b/css/custom.css
@@ -371,6 +371,7 @@ nav .form-control {
 
 .inner-content-right {
 	background: url(../img/sloy_1_34.png) #fff no-repeat top center;
+	padding-bottom: 70px;
 }
 
 .red-deco {
