--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5620,7 +5620,7 @@ input[type="button"].btn-block {
 	padding: 0.5rem 0.75rem;
 	margin-left: -1px;
 	line-height: 1.25;
-	color: #007bff;
+	color: #3d6fae;
 	background-color: #fff;
 	border: 1px solid #dee2e6;
 }
