--- a/css/custom.css
+++ b/css/custom.css
@@ -565,6 +565,11 @@ p.card-text {
 	font-weight: 600;
 }
 
+.news-block img {
+	max-width: 100%;
+	max-height: 220px;
+}
+
 /* Subscribe */
 
 .subscribe {
