--- a/css/custom.css
+++ b/css/custom.css
@@ -384,7 +384,7 @@ nav .form-control {
 	margin-bottom: 30px;
 }
 
-.main-showcase img {
+.main-showcase a img {
 	border: 20px solid #f3f6fa;
 	max-width: 100%;
 }
@@ -464,6 +464,22 @@ li.breadcrumb-item.active {
 	width: 40px;
 	height: 40px;
 	margin-right: 20px;
+}
+
+ul.red-round {
+	margin: 0.6rem 0;
+	padding-left: 0;
+	list-style-type: none;
+}
+
+ul.red-round li {
+	padding-left: 1rem;
+	background-image: url(../img/svg/round-list-item.svg);
+	background-position: 0 0.5rem;
+	background-size: 0.5rem 0.5rem;
+	background-repeat: no-repeat;
+	margin-bottom: 0.3rem;
+	font-size: 14px;
 }
 
 /* News Block */
