--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,14 @@
 /* Custom page CSS
 -------------------------------------------------- */
 
+a:-webkit-any-link:focus-visible {
+	outline-offset: 0px;
+}
+
+:focus-visible {
+	outline: -webkit-focus-ring-color auto 0px;
+}
+
 .base {
 	font-size: 18px;
 	line-height: 1.2;
