--- a/css/custom.css
+++ b/css/custom.css
@@ -518,6 +518,7 @@ a.collapse-readmore {
 	border-bottom: 1px dashed;
 	margin-top: 5px;
 	margin-bottom: 10px;
+	margin-left: 15px;
 	display: inline-block;
 	font-weight: 500;
 	color: #000;
