--- a/css/custom.css
+++ b/css/custom.css
@@ -795,4 +795,13 @@ footer {
 
 #btnScroll img {
 	width: 52px;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+}
+
+#btnScroll img:hover {
+	box-shadow: 0 0 5px 0 rgb(0 0 0 / 20%);
 }
